# mcp-geneinfo

./: LICENSE  README.md  pyproject.toml
mcpgeneinfo/: __init__.py  app.py  bridge.py  cli.py  main.py  mcp_server.py
tests/: __init__.py  test_main.py
